# bg3-modorder

./: Cargo.toml  README.md  config.toml
main/: Cargo.toml
main/src/: error.rs  main.rs
mod_meta/: Cargo.toml
mod_meta/src/: lib.rs
pak_reader/: Cargo.toml
pak_reader/src/: lib.rs  parser.rs
