[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.20"
mod_meta = { path = "../mod_meta" }
pak_reader = { path = "../pak_reader" }
quick-xml = "0.30.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
