[package]
name = "bg3-modorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.27"
log = "0.4.20"
lz4_flex = "0.11.1"
nom = "*"
serde = { version = "1.0.183", features = ["derive"] }
serde-xml-rs = "0.6.0"
